// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/team/TeamProfile should match snapshot (not cloud, freemium disabled 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_button__icon-slot_doayp_27"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              class="_button__label_doayp_24"
            >
              Archive Team
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile should match snapshot with isArchived true 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_button__icon-slot_doayp_27"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M5 5V7H19V5M10.5 17V14H8L12 10L16 14H13.5V17"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              class="_button__label_doayp_24"
            >
              Unarchive Team
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile__Cloud restore should not be disabled when below teams limit 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_button__icon-slot_doayp_27"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M5 5V7H19V5M10.5 17V14H8L12 10L16 14H13.5V17"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              class="_button__label_doayp_24"
            >
              Unarchive Team
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile__Cloud should match snapshot - archived, at teams limit 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="_button__icon-slot_doayp_27"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M5 5V7H19V5M10.5 17V14H8L12 10L16 14H13.5V17"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              class="_button__label_doayp_24"
            >
              Unarchive Team
            </span>
          </button>
          <button
            class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47"
            type="button"
          >
            <span
              class="_button__label_doayp_24"
            >
              View upgrade options
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile__Cloud should match snapshot - not archived, at teams limit 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="_button_doayp_2 _button--emphasis-secondary_doayp_75 _button--size-medium_doayp_47 _button--destructive_doayp_130"
            type="button"
          >
            <span
              aria-hidden="true"
              class="_button__icon-slot_doayp_27"
            >
              <div
                aria-hidden="true"
                class="_icon_1i355_2 _icon--size-16_1i355_38"
              >
                <div
                  class="_icon__glyph-area_1i355_9"
                >
                  <svg
                    fill="currentColor"
                    height="18"
                    version="1.1"
                    viewBox="0 0 24 24"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 21H4V10H6V19H18V10H20V21M3 3H21V9H3V3M9.5 11H14.5C14.78 11 15 11.22 15 11.5V13H9V11.5C9 11.22 9.22 11 9.5 11M5 5V7H19V5H5Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <span
              class="_button__label_doayp_24"
            >
              Archive Team
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
